-issue#1197: Add more collection intervals to Data Source Profiles
-issue#1206: Display issue with internationalization number format
-issue#1210: CDEF and VDEF Items can not be properly edited
-issue#1212: Cacti breadcrumbs don't handle External links correctly
-issue#1213: PHPMailer trying TLS despite SMTPSecure setting
-issue#1215: Make installation pages format better and display version
-issue: Named colors fail to import on install or upgrade
-issue: Drag and Drop issues on multiple pages could corrupt sequencing
-feature: Enhance filter to permit more glyphs for table headers
-feature: Add a page refresh dropdown to the Automation Networks
-feature: Enhanced SNMP v3 input forms
-feature: Allow Trees to be rearranged using Drag and Drop

1.1.30
-issue#1155: Non-secure mail setting not functional due to changes in phpmailer
-issue#1157: Resolve issue with branch permission api
-issue#1158: Change CLOG to use regex replacement so line details are not mangled
-issue#1161: Graph View regex's are not preserved during automatic page refresh
-issue#1162: Error messages are not display when editing a user
-issue#1166: Default language was not correctly set when editing a user
-issue#1182: Support noAuthNoPriv for SNMPv3 in Cacti
-issue: basename function undefined during upgrade to 1.0.x
-issue: Storage API and translations required for Change password function
-issue: ALTER IGNORE still throws an error when attempting to drop the primary key
-issue: Data Source profile form API generates error when system is half upgraded
-issue: Resolve issue with importing packages
-feature: Update package versions for Cacti version 1.1.29

1.1.29
-issue#871: Allow Nth Percentile and Bandwidth Summation to respect 'Base Value' in template
-issue#965: Duplicate error message and incorrect error code when using LDAP authentication
-issue#1084: Graph Tree Branch not properly populating when editing report item
-issue#1104: Datetime formatting in developer debug mode incorrect